# fax-asteroids

./: CMakeLists.txt  README.md  buildEmscripten.bat  min_shell.html
.github/workflows/: cmake-multi-platform.yml
src/: main.cpp  textureManager.h
src/components/: components.h
src/core/: app.cpp  app.h  appConfig.h  assetManager.cpp  assetManager.h  coremath.cpp  coremath.h  loadingScene.cpp  loadingScene.h  scene.h  sceneManager.cpp  sceneManager.h
src/scenes/: mainScene.cpp  mainScene.h
src/scenes/mainScene/: asteroidSystem.cpp  cameraSystem.cpp  collisionSystem.cpp  hudSystem.cpp  inputSystem.cpp  mainSceneSystems.h  movementSystem.cpp  playerSystem.cpp  renderSystem.cpp  shootSystem.cpp  timeoutSystem.cpp
